added webrtc server

--- a/chatapp/templates/dashboard.html
+++ b/chatapp/templates/dashboard.html
@@ -525,19 +525,10 @@
     const configuration = {
       iceServers: [
         { urls: 'stun:stun.l.google.com:19302' },
-        { urls: 'stun:stun1.l.google.com:19302' },
-        { urls: 'stun:stun2.l.google.com:19302' },
-        { urls: 'stun:stun3.l.google.com:19302' },
-        { urls: 'stun:stun4.l.google.com:19302' },
         {
-          urls: 'turn:numb.viagenie.ca',
-          credential: 'muazkh',
-          username: 'webrtc@live.com'
-        },
-        {
-          urls: 'turn:turn.anyfirewall.com:443?transport=tcp',
-          credential: 'webrtc',
-          username: 'webrtc'
+          urls: 'turn:34.100.213.106:3478',
+          username: 'webrtcneal',
+          credential: 'webrtcneal4115'
         }
       ],
       iceCandidatePoolSize: 10
